nginx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
  namespace: web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`web1.dmm.tt.pk`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    secretName: traefik-cert
